--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <title>BlackFalcon SOC™</title>
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <style>
 body{
@@ -13,17 +12,22 @@ font-family:'Cairo',sans-serif;
 background:#001a00;
 color:#00ff7f;
 transition:0.5s;
+direction:rtl;
+}
+
+body.alertHigh{
+background:#550000 !important;
+color:#fff !important;
 }
 
 header{
 text-align:center;
 padding:20px;
 border-bottom:1px solid #00ff7f33;
-cursor:pointer;
 }
 
 .container{
-max-width:1000px;
+max-width:900px;
 margin:20px auto;
 padding:25px;
 background:rgba(0,20,0,0.9);
@@ -40,7 +44,6 @@ padding:15px;
 color:#00ff7f;
 font-size:16px;
 resize:none;
-transition:0.3s;
 }
 
 textarea:focus{
@@ -48,13 +51,14 @@ outline:none;
 box-shadow:0 0 20px #00ff7f;
 }
 
-.card{
-background:#001a00;
-padding:20px;
-border-radius:15px;
-margin-top:15px;
-box-shadow:0 0 15px #00ff7f22;
+button{
+margin-top:10px;
+padding:10px 20px;
+background:#00ff7f;
+border:none;
+border-radius:10px;
 cursor:pointer;
+font-weight:bold;
 }
 
 .progress{
@@ -73,18 +77,7 @@ transition:0.5s;
 }
 
 .bar.alert{
-animation:pulse 1s infinite;
-}
-
-@keyframes pulse{
-0%{width:100%;}
-50%{width:95%;}
-100%{width:100%;}
-}
-
-body.alertHigh{
-background:#550000 !important;
-color:#fff !important;
+background:#ff0000;
 }
 
 .log{
@@ -94,78 +87,89 @@ background:#0a0a0a;
 padding:10px;
 border-radius:10px;
 font-size:12px;
-}
-
-footer{
-text-align:center;
-padding:15px;
-font-size:12px;
-border-top:1px solid #00ff7f33;
-cursor:pointer;
+margin-top:10px;
 }
 </style>
 </head>
 
 <body>
 
-<header data-voice="BlackFalcon SOC. نظام مراقبة وتحليل التهديدات السيبرانية.">
+<header>
 <h1>🦅 BlackFalcon SOC™</h1>
-<p>Security Operations Simulation</p>
+<p>Advanced Phishing Detection Simulation</p>
 </header>
 
 <div class="container">
 
-<textarea id="msg"
-data-voice="هذا مربع إدخال الرسالة. اكتب الرسالة لتحليلها أمنياً."
-placeholder="اكتبي الرسالة هنا للتحليل..."></textarea>
+<textarea id="msg" placeholder="اكتبي الرسالة هنا للتحليل..."></textarea>
+<button onclick="analyzeMessage()">تحليل</button>
 
-<div class="card" data-voice="قسم حالة التهديد ونسبة الخطورة.">
-<h3>Threat Status</h3>
-<p id="status">—</p>
+<h3 id="status">—</h3>
 <p>Risk Score: <span id="score">0</span>%</p>
 <div class="progress"><div class="bar" id="bar"></div></div>
-<p>Incident ID: <span id="incident">—</span></p>
-</div>
 
-<div class="card" data-voice="سجل الحوادث الأمنية المكتشفة.">
-<h3>Incident Log</h3>
+<h4>Incident Log</h4>
 <div class="log" id="log"></div>
-</div>
-
-<div class="card" data-voice="إحصائيات تحليل الرسائل الآمنة والخطيرة.">
-<h3>Statistics</h3>
-<canvas id="chart"></canvas>
-</div>
 
 </div>
 
-<footer data-voice="تم تطوير النظام بواسطة BlackFalcon SOC.">
-BlackFalcon SOC™
-</footer>
-
-<audio id="alertHighSound">
+<audio id="alertSound">
 <source src="https://assets.mixkit.co/active_storage/sfx/2869/2869-preview.mp3">
 </audio>
 
 <script>
-let stats={safe:0,high:0};
-let lastStatus="";
-let debounceTimer=null;
-let lastSpoken="";
 
+let lastSpoken="";
+let lastStatus="";
+
+// 🔥🔥🔥 قائمة ضخمة جداً
 const suspiciousWords=[
-"تحقق من كلمة المرور",
-"تحقق من حسابك",
-"تحقق من حسابك البنكي",
-"قم بالدخول إلى حسابك",
-"تحديث الحساب",
-"الإجراء المطلوب",
-"فعّل الآن",
-"تغيير كلمة المرور",
-"انقر للتحقق",
-"أكد بياناتك",
-"معلومات سرية",
-"اختراق البيانات"
+
+// عربي مالي وبنكي
+"تحقق من حسابك","تحقق من حسابك البنكي","تحقق من كلمة المرور",
+"ادخل كلمة المرور","ادخل بياناتك","ادخل بياناتك البنكية",
+"رقم البطاقة","رقم سري","الرقم السري","رمز التحقق",
+"رمز otp","كود التفعيل","تم تجميد حسابك","حسابك موقوف",
+"تحديث الحساب","تحديث بياناتك","بيانات الدفع",
+"تحويل فوري","تحويل مالي","دفعة مستحقة","فاتورة غير مدفوعة",
+"تم سحب مبلغ","عملية مشبوهة","نشاط غير معتاد",
+"حسابك معرض للخطر","حماية الحساب","تأكيد الهوية",
+"استرجاع الحساب","استعادة الحساب","تغيير كلمة المرور",
+
+// عربي تسويقي احتيالي
+"اربح الآن","مبروك لقد ربحت","انضم الآن",
+"فرصة محدودة","عرض حصري","جائزة مالية",
+"استلم جائزتك","اضغط هنا فوراً",
+"سارع الآن","لفترة محدودة","مجانا الآن",
+"هدية مجانية","بطاقة هدايا","ربح فوري",
+
+// اختراق وتهديد
+"تم اختراق جهازك","اختراق البيانات",
+"فيروس خطير","ملف تجسس","تم تسجيل دخول غير مصرح",
+"سنقوم بحظر حسابك","إغلاق الحساب نهائياً",
+
+// English Banking
+"verify your account","verify your password",
+"bank account verification","confirm your identity",
+"account suspended","account locked","security alert",
+"reset your password","update payment info",
+"credit card update","bank login","paypal verification",
+"wire transfer","confirm billing","urgent action required",
+"login immediately","unusual activity detected",
+
+// English Scam Marketing
+"claim your prize","you won","congratulations winner",
+"limited time offer","free gift card","exclusive offer",
+"act now","instant reward","crypto investment",
+"bitcoin profit","double your money",
+"investment opportunity","guaranteed return",
+"no risk profit","earn money fast",
+
+// Threat
+"your device is infected",
+"malware detected",
+"click here to secure",
+"unauthorized access attempt"
 ];
 
 const suspiciousPattern=new RegExp(suspiciousWords.join("|"),"i");
@@ -173,9 +177,11 @@ const suspiciousPattern=new RegExp(suspiciousWords.join("|"),"i");
 function speak(text){
 if(text===lastSpoken) return;
 lastSpoken=text;
+
 let u=new SpeechSynthesisUtterance(text);
 u.lang="ar-SA";
 u.rate=0.95;
+u.pitch=1.2;
 speechSynthesis.cancel();
 speechSynthesis.speak(u);
 }
@@ -185,11 +191,15 @@ return "INC-"+Date.now().toString().slice(-6);
 }
 
 function analyzeMessage(){
-let text=document.getElementById("msg").value.toLowerCase().normalize("NFC");
-if(text.length<3) return;
 
-let score=0;
+let text=document.getElementById("msg").value
+.toLowerCase()
+.normalize("NFC");
+
+if(text.length<2) return;
+
 let status="";
+let score=0;
 let bar=document.getElementById("bar");
 
 document.body.classList.remove("alertHigh");
@@ -198,19 +208,19 @@ bar.classList.remove("alert");
 if(suspiciousPattern.test(text)){
 score=100;
 status="خطر عالي";
-stats.high++;
 document.body.classList.add("alertHigh");
 bar.classList.add("alert");
-document.getElementById("alertHighSound").play();
+document.getElementById("alertSound").play();
 
 if(lastStatus!=="high"){
-speak("تحذير. تم اكتشاف رسالة خطيرة عالية الخطورة.");
+speak("تحذير. تم اكتشاف رسالة تصيد احتيالي عالية الخطورة.");
 lastStatus="high";
 }
+
 }else{
+
 score=0;
 status="آمن";
-stats.safe++;
 
 if(lastStatus!=="safe"){
 speak("الرسالة تبدو آمنة.");
@@ -223,47 +233,14 @@ document.getElementById("score").innerText=score;
 bar.style.width=score+"%";
 
 let inc=generateIncident();
-document.getElementById("incident").innerText=inc;
-
 document.getElementById("log").innerHTML+=
 `[${new Date().toLocaleTimeString()}] ${inc} - ${status} (${score}%)<br>`;
-
-updateChart();
 }
-
-function analyze(){
-clearTimeout(debounceTimer);
-debounceTimer=setTimeout(analyzeMessage,600);
-}
-
-document.getElementById("msg").addEventListener("input",analyze);
 
 document.getElementById("msg").addEventListener("focus",()=>{
 speak("تم تحديد مربع إدخال الرسالة.");
 });
 
-// 🔥 قراءة أي عنصر فيه data-voice
-document.querySelectorAll("[data-voice]").forEach(el=>{
-el.addEventListener("mouseenter",()=>{
-speak(el.getAttribute("data-voice"));
-});
-});
-
-let chart=new Chart(document.getElementById("chart"),{
-type:'doughnut',
-data:{
-labels:['Safe','High'],
-datasets:[{
-data:[0,0],
-backgroundColor:['#00ff7f','#ff4d4d']
-}]
-}
-});
-
-function updateChart(){
-chart.data.datasets[0].data=[stats.safe,stats.high];
-chart.update();
-}
 </script>
 
 </body>
