--- a/index.html
+++ b/index.html
@@ -1,112 +1,78 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <title>BlackFalcon SOC™</title>
-<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 
 <style>
 body{
 margin:0;
-font-family:'Cairo',sans-serif;
-background:#001a00;
-color:#00ff7f;
+font-family:'Orbitron',sans-serif;
+background:linear-gradient(180deg,#001a14,#000);
+color:#00ffcc;
 transition:0.5s;
-direction:rtl;
 }
 
-body.alertHigh{
-background:#550000 !important;
-color:#fff !important;
+body.alert{
+background:#3b0000 !important;
 }
 
 header{
 text-align:center;
-padding:20px;
-border-bottom:1px solid #00ff7f33;
-}
-
-.container{
-max-width:1000px;
-margin:20px auto;
-padding:25px;
-background:rgba(0,20,0,0.9);
-border-radius:20px;
-}
-
-.langSwitch{
-text-align:center;
-margin-bottom:15px;
-}
-
-.langSwitch button{
-padding:8px 15px;
-margin:5px;
-background:#00ff7f;
-border:none;
-border-radius:10px;
-cursor:pointer;
-font-weight:bold;
+padding:40px 20px;
 }
 
 textarea{
-width:100%;
-height:140px;
+width:85%;
+height:150px;
+display:block;
+margin:20px auto;
 background:#000;
-border:2px solid #00ff7f;
-border-radius:15px;
-padding:15px;
-color:#00ff7f;
+border:2px solid #00ffcc;
+border-radius:20px;
+padding:20px;
+color:#00ffcc;
 font-size:16px;
-resize:none;
 }
 
-textarea:focus{
-outline:none;
-box-shadow:0 0 20px #00ff7f;
+button{
+display:block;
+margin:20px auto;
+padding:12px 30px;
+background:#00ffcc;
+border:none;
+border-radius:15px;
+font-weight:bold;
+cursor:pointer;
 }
 
 .card{
-background:#001a00;
-padding:20px;
-border-radius:15px;
-margin-top:15px;
-box-shadow:0 0 15px #00ff7f22;
+width:85%;
+margin:20px auto;
+background:#050505;
+border-radius:20px;
+padding:25px;
+box-shadow:0 0 30px #00ffcc22;
 }
 
 .progress{
-height:12px;
-background:#003300;
+height:10px;
+background:#111;
 border-radius:10px;
-margin-top:10px;
+margin-top:15px;
+overflow:hidden;
 }
 
 .bar{
 height:100%;
 width:0%;
-background:#00ff7f;
-border-radius:10px;
+background:#00ffcc;
 transition:0.5s;
 }
 
-.bar.alert{
+.bar.danger{
 background:#ff0000;
-}
-
-.log{
-max-height:150px;
-overflow:auto;
-background:#0a0a0a;
-padding:10px;
-border-radius:10px;
-font-size:12px;
-}
-
-footer{
-text-align:center;
-padding:15px;
-font-size:12px;
-border-top:1px solid #00ff7f33;
 }
 </style>
 </head>
@@ -115,34 +81,21 @@ border-top:1px solid #00ff7f33;
 
 <header>
 <h1>🦅 BlackFalcon SOC™</h1>
-<p id="subtitle">نظام تحليل التهديدات السيبرانية</p>
+<p>Advanced SOC Simulation Platform</p>
 </header>
 
-<div class="container">
+<textarea id="msg" placeholder="Paste suspicious message here..."></textarea>
 
-<div class="langSwitch">
-<button onclick="setLang('ar')">العربية</button>
-<button onclick="setLang('en')">English</button>
-</div>
-
-<textarea id="msg" placeholder="اكتبي الرسالة هنا للتحليل..."></textarea>
+<button onclick="exportReport()">Export Report</button>
 
 <div class="card">
-<h3 id="status">—</h3>
+<h3>Threat Status</h3>
+<p id="status">—</p>
 <p>Risk Score: <span id="score">0</span>%</p>
 <div class="progress"><div class="bar" id="bar"></div></div>
+<p>MITRE: <span id="mitre">—</span></p>
+<p>Incident ID: <span id="incident">—</span></p>
 </div>
-
-<div class="card">
-<h3>Incident Log</h3>
-<div class="log" id="log"></div>
-</div>
-
-</div>
-
-<footer>
-BlackFalcon SOC™
-</footer>
 
 <audio id="alertSound">
 <source src="https://assets.mixkit.co/active_storage/sfx/2869/2869-preview.mp3">
@@ -150,126 +103,156 @@ BlackFalcon SOC™
 
 <script>
 
-let currentLang="ar";
-let lastStatus="";
-let lastSpoken="";
 let debounceTimer=null;
+let incidentID="";
+let mitreID="";
+let riskScore=0;
+
+/* 🔥🔥🔥 قائمة ضخمة جداً (القديمة + توسعة) */
 
 const suspiciousWords=[
 
-// عربي شامل ضخم
+// عربي بنكي
 "تحقق من حسابك","تحقق من حسابك البنكي","تحقق من كلمة المرور",
-"ادخل كلمة المرور","ادخل بياناتك","ادخل بياناتك البنكية",
-"رقم البطاقة","الرقم السري","رمز التحقق","رمز otp",
-"تم تجميد حسابك","حسابك موقوف","تحديث الحساب",
-"بيانات الدفع","تحويل فوري","عملية مشبوهة",
-"نشاط غير معتاد","تأكيد الهوية","استرجاع الحساب",
-"تغيير كلمة المرور","اربح الآن","مبروك لقد ربحت",
-"انضم الآن","عرض حصري","جائزة مالية",
-"استلم جائزتك","اضغط هنا فوراً",
-"تم اختراق جهازك","اختراق البيانات",
-"سنقوم بحظر حسابك","إغلاق الحساب",
+"ادخل بياناتك","ادخل بياناتك البنكية","رقم البطاقة",
+"الرقم السري","رمز التحقق","رمز otp",
+"تحديث الحساب","تحديث بياناتك",
+"تم تجميد حسابك","حسابك موقوف",
+"عملية مشبوهة","نشاط غير معتاد",
+"تحويل فوري","دفعة مستحقة","فاتورة غير مدفوعة",
+"استرجاع الحساب","استعادة الحساب",
+"تأكيد الهوية","تغيير كلمة المرور",
+"حماية الحساب","تسجيل دخول غير مصرح",
+"تم سحب مبلغ","كشف حساب عاجل",
 
-// English
+// عربي تسويقي احتيالي
+"مبروك لقد ربحت","اربح الآن","جائزة مالية",
+"استلم جائزتك","عرض حصري",
+"لفترة محدودة","فرصة محدودة",
+"انضم الآن","اضغط هنا فوراً",
+"هدية مجانية","بطاقة هدايا",
+"ربح فوري","مجانا الآن",
+
+// تهديد واختراق
+"تم اختراق جهازك","اختراق البيانات",
+"فيروس خطير","ملف تجسس",
+"سنقوم بحظر حسابك","إغلاق الحساب نهائياً",
+
+// English Banking
 "verify your account","verify your password",
 "confirm your identity","account suspended",
-"account locked","reset your password",
-"update payment info","credit card update",
-"urgent action required","claim your prize",
-"free gift card","limited time offer",
-"bitcoin investment","double your money",
+"account locked","security alert",
+"reset your password","update payment info",
+"credit card update","bank login",
+"paypal verification","wire transfer",
+"confirm billing","urgent action required",
+"login immediately","unusual activity detected",
+
+// English Scam
+"claim your prize","you won",
+"congratulations winner","limited time offer",
+"free gift card","exclusive offer",
+"act now","instant reward",
+"crypto investment","bitcoin profit",
+"double your money","investment opportunity",
+"guaranteed return","earn money fast",
+
+// Threat
+"malware detected","your device is infected",
 "unauthorized access attempt",
-"malware detected","security alert"
+"click here to secure","download attachment immediately"
 ];
 
-const suspiciousPattern=new RegExp(suspiciousWords.join("|"),"i");
+const pattern=new RegExp(suspiciousWords.join("|"),"i");
 
-function speak(text){
-if(text===lastSpoken) return;
-lastSpoken=text;
-
-let u=new SpeechSynthesisUtterance(text);
-u.lang=currentLang==="ar"?"ar-SA":"en-US";
-u.rate=0.95;
-u.pitch=1.2;
-speechSynthesis.cancel();
-speechSynthesis.speak(u);
+function generateID(){
+return "INC-"+Math.floor(Math.random()*999999);
 }
 
-function analyzeMessage(){
+function analyze(){
 
-let text=document.getElementById("msg").value
-.toLowerCase()
-.normalize("NFC");
+let text=document.getElementById("msg").value;
+if(text.length<3) return;
 
-if(text.length<2) return;
+document.body.classList.remove("alert");
+document.getElementById("bar").classList.remove("danger");
 
-let status="";
-let score=0;
-let bar=document.getElementById("bar");
+if(pattern.test(text)){
 
-document.body.classList.remove("alertHigh");
-bar.classList.remove("alert");
-
-if(suspiciousPattern.test(text)){
-score=100;
-status=currentLang==="ar"?"خطر عالي":"High Risk";
-document.body.classList.add("alertHigh");
-bar.classList.add("alert");
+riskScore=100;
+incidentID=generateID();
+mitreID="T1566 - Phishing";
+document.getElementById("status").innerText="HIGH RISK";
+document.getElementById("score").innerText=riskScore;
+document.getElementById("bar").style.width="100%";
+document.getElementById("bar").classList.add("danger");
+document.getElementById("mitre").innerText=mitreID;
+document.getElementById("incident").innerText=incidentID;
+document.body.classList.add("alert");
 document.getElementById("alertSound").play();
 
-if(lastStatus!=="high"){
-speak(currentLang==="ar"
-?"تحذير. تم اكتشاف رسالة تصيد احتيالي عالية الخطورة."
-:"Warning. High risk phishing message detected.");
-lastStatus="high";
-}
-
 }else{
-score=0;
-status=currentLang==="ar"?"آمن":"Safe";
 
-if(lastStatus!=="safe"){
-speak(currentLang==="ar"
-?"الرسالة تبدو آمنة."
-:"Message appears safe.");
-lastStatus="safe";
+riskScore=0;
+incidentID=generateID();
+mitreID="None";
+document.getElementById("status").innerText="SAFE";
+document.getElementById("score").innerText=riskScore;
+document.getElementById("bar").style.width="0%";
+document.getElementById("mitre").innerText=mitreID;
+document.getElementById("incident").innerText=incidentID;
+
 }
 }
 
-document.getElementById("status").innerText=status;
-document.getElementById("score").innerText=score;
-bar.style.width=score+"%";
-
-document.getElementById("log").innerHTML+=
-`[${new Date().toLocaleTimeString()}] ${status} (${score}%)<br>`;
-}
-
-function analyzeAuto(){
+document.getElementById("msg").addEventListener("input",()=>{
 clearTimeout(debounceTimer);
-debounceTimer=setTimeout(analyzeMessage,600);
-}
-
-document.getElementById("msg").addEventListener("input",analyzeAuto);
-
-document.getElementById("msg").addEventListener("focus",()=>{
-speak(currentLang==="ar"
-?"تم تحديد مربع إدخال الرسالة."
-:"Message input field selected.");
+debounceTimer=setTimeout(analyze,1500);
 });
 
-function setLang(lang){
-currentLang=lang;
+function exportReport(){
 
-if(lang==="ar"){
-document.body.style.direction="rtl";
-document.getElementById("subtitle").innerText="نظام تحليل التهديدات السيبرانية";
-document.getElementById("msg").placeholder="اكتبي الرسالة هنا للتحليل...";
-}else{
-document.body.style.direction="ltr";
-document.getElementById("subtitle").innerText="Cyber Threat Analysis System";
-document.getElementById("msg").placeholder="Type message here for analysis...";
-}
+let message=document.getElementById("msg").value;
+let status=document.getElementById("status").innerText;
+let date=new Date().toLocaleString();
+
+let recommendation = status==="HIGH RISK" ?
+"Immediate investigation required. Block sender and prevent interaction." :
+"No malicious indicators detected. Continue monitoring.";
+
+let w=window.open('','','width=900,height=700');
+
+w.document.write(`
+<html>
+<head>
+<title>BlackFalcon SOC Report</title>
+<style>
+body{font-family:Arial;padding:40px;color:#000;}
+h1{color:#0a7d5c;}
+.box{border:1px solid #ccc;padding:15px;border-radius:8px;margin-top:10px;}
+</style>
+</head>
+<body>
+
+<h1>BlackFalcon SOC™ Security Report</h1>
+<p><b>Date:</b> ${date}</p>
+<p><b>Incident ID:</b> ${incidentID}</p>
+<p><b>Status:</b> ${status}</p>
+<p><b>Risk Score:</b> ${riskScore}%</p>
+<p><b>MITRE:</b> ${mitreID}</p>
+
+<h2>Analyzed Message</h2>
+<div class="box">${message}</div>
+
+<h2>Recommendation</h2>
+<div class="box">${recommendation}</div>
+
+</body>
+</html>
+`);
+
+w.document.close();
+w.print();
 }
 
 </script>
