--- a/index.html
+++ b/index.html
@@ -76,59 +76,37 @@ transition:0.5s;
 .bar.danger{
 background:#ff0000;
 }
-
-.recommendation{
-width:85%;
-margin:20px auto;
-padding:20px;
-border-radius:15px;
-font-weight:bold;
-background:#002b24;
-border:2px solid #00ffcc;
-box-shadow:0 0 20px #00ffcc33;
-transition:0.5s;
-}
-
-.recommendation.danger{
-background:#330000;
-border:2px solid #ff0000;
-box-shadow:0 0 25px #ff000066;
-color:#ffb3b3;
-}
 </style>
 </head>
 
 <body>
 
 <header>
-<h1 id="title" class="speakable">🦅 BlackFalcon SOC</h1>
-<p id="subtitle" class="speakable">Advanced Security Operations Platform</p>
+<h1 class="speakable">🦅 BlackFalcon SOC</h1>
+<p class="speakable">Advanced Security Operations Platform</p>
 </header>
 
 <div class="center">
-<button onclick="toggleLang()" class="speakable">🌍 Change Language</button>
+<button onclick="toggleLang()" class="speakable">Change Language</button>
 <button onclick="window.print()" class="speakable">Export Report</button>
 </div>
 
 <textarea id="msg" placeholder="Paste suspicious message here..." class="speakable"></textarea>
 
 <div class="card">
-<h3 id="threatTitle" class="speakable">Threat Status</h3>
+<h3 class="speakable">Threat Status</h3>
 <p id="status" class="speakable">—</p>
-<p class="speakable"><span id="riskLabel">Risk Score</span>: <span id="score">0</span>%</p>
+<p class="speakable">Risk Score: <span id="score">0</span>%</p>
 <div class="progress"><div class="bar" id="bar"></div></div>
 <p class="speakable">MITRE: <span id="mitre">—</span></p>
-<p class="speakable"><span id="incidentLabel">Incident ID</span>: <span id="incident">—</span></p>
-</div>
-
-<div id="recommendationBox" class="recommendation speakable">
-Security recommendation will appear here.
+<p class="speakable">Incident ID: <span id="incident">—</span></p>
 </div>
 
 <script>
 
 let currentLang="en";
 let debounceTimer=null;
+let analyzedOnce=false;
 
 const suspiciousWords=[
 "تحقق من حسابك","تحقق من كلمة المرور","ادخل بياناتك",
@@ -140,29 +118,31 @@ const suspiciousWords=[
 
 const pattern=new RegExp(suspiciousWords.join("|"),"i");
 
-/* اختيار صوت ناعم */
+/* 🎙 اختيار أنعم صوت */
 function getSoftVoice(){
 let voices=window.speechSynthesis.getVoices();
 return voices.find(v =>
 v.name.toLowerCase().includes("female") ||
-v.name.toLowerCase().includes("zira") ||
-v.name.toLowerCase().includes("google")
+v.name.toLowerCase().includes("siri") ||
+v.name.toLowerCase().includes("google") ||
+v.name.toLowerCase().includes("zira")
 ) || voices[0];
 }
 
 function speak(text){
-if(!text) return;
+
+if(!text || text.length<2) return;
+
 window.speechSynthesis.cancel();
+
 let speech=new SpeechSynthesisUtterance(text);
 speech.lang=currentLang==="ar"?"ar-SA":"en-US";
 speech.rate=0.95;
 speech.pitch=1;
+speech.volume=1;
 speech.voice=getSoftVoice();
-window.speechSynthesis.speak(speech);
-}
 
-function generateID(){
-return "INC-"+Math.floor(Math.random()*999999);
+window.speechSynthesis.speak(speech);
 }
 
 function analyze(){
@@ -173,59 +153,39 @@ if(text.length<3) return;
 let statusEl=document.getElementById("status");
 let bar=document.getElementById("bar");
 let score=document.getElementById("score");
-let mitre=document.getElementById("mitre");
-let incident=document.getElementById("incident");
-let recBox=document.getElementById("recommendationBox");
 
 document.body.classList.remove("alert");
 bar.classList.remove("danger");
-recBox.classList.remove("danger");
 
 if(pattern.test(text)){
 
-statusEl.innerText=currentLang==="ar"?"خطر عالي":"HIGH RISK";
+statusEl.innerText="HIGH RISK";
 score.innerText="100";
 bar.style.width="100%";
 bar.classList.add("danger");
-mitre.innerText="T1566 - Phishing";
-incident.innerText=generateID();
 document.body.classList.add("alert");
 
-recBox.innerText=currentLang==="ar"?
-"⚠️ التوصية الأمنية: لا تضغط أي رابط. قم بحظر المرسل وإبلاغ فريق الأمن السيبراني فوراً." :
-"⚠️ Security Recommendation: Do NOT click any links. Block the sender and report immediately.";
-recBox.classList.add("danger");
-
-setTimeout(()=>{
-speak(currentLang==="ar"?"تحذير. الرسالة خطيرة جداً":"Warning. High risk message detected.");
-},500);
+setTimeout(()=>speak("Warning. High risk message detected"),300);
 
 }else{
 
-statusEl.innerText=currentLang==="ar"?"آمن":"SAFE";
+statusEl.innerText="SAFE";
 score.innerText="0";
 bar.style.width="0%";
-mitre.innerText="None";
-incident.innerText=generateID();
 
-recBox.innerText=currentLang==="ar"?
-"✔ التوصية الأمنية: لا يوجد مؤشرات خطيرة. فقط استمر بالمراقبة." :
-"✔ Security Recommendation: No malicious indicators detected. Continue monitoring.";
-recBox.classList.remove("danger");
-
-setTimeout(()=>{
-speak(currentLang==="ar"?"الرسالة آمنة":"Message is safe.");
-},500);
-}
+setTimeout(()=>speak("Message is safe"),300);
 }
 
-/* تحليل بعد التوقف */
+analyzedOnce=true;
+}
+
+/* 🔥 تحليل فقط بعد التوقف عن الكتابة */
 document.getElementById("msg").addEventListener("input",()=>{
 clearTimeout(debounceTimer);
 debounceTimer=setTimeout(analyze,2000);
 });
 
-/* قراءة أي عنصر يمر عليه الماوس */
+/* 🎙 قراءة أي عنصر يمر عليه الماوس */
 document.addEventListener("mouseover",(e)=>{
 let text=e.target.innerText || e.target.placeholder;
 if(e.target.classList.contains("speakable") || e.target.tagName==="BUTTON"){
@@ -233,31 +193,13 @@ speak(text);
 }
 });
 
+/* 🔥 قراءة مربع النص عند الدخول فقط */
 document.getElementById("msg").addEventListener("focus",()=>{
-speak(currentLang==="ar"?
-"أنت الآن في مربع إدخال النص. الصق الرسالة للتحليل.":
-"You are now in the text input box. Paste message to analyze.");
+speak("Text input box. Paste message to analyze.");
 });
 
-/* زر تغيير اللغة */
 function toggleLang(){
-
-if(currentLang==="en"){
-currentLang="ar";
-document.getElementById("subtitle").innerText="منصة مركز العمليات الأمنية";
-document.getElementById("threatTitle").innerText="حالة التهديد";
-document.getElementById("riskLabel").innerText="درجة الخطورة";
-document.getElementById("incidentLabel").innerText="رقم الحادثة";
-document.getElementById("msg").placeholder="الصق الرسالة هنا للتحليل...";
-}else{
-currentLang="en";
-document.getElementById("subtitle").innerText="Advanced Security Operations Platform";
-document.getElementById("threatTitle").innerText="Threat Status";
-document.getElementById("riskLabel").innerText="Risk Score";
-document.getElementById("incidentLabel").innerText="Incident ID";
-document.getElementById("msg").placeholder="Paste suspicious message here...";
-}
-
+currentLang=currentLang==="en"?"ar":"en";
 speak(currentLang==="ar"?"تم تغيير اللغة":"Language changed");
 }
 
