--- a/index.html
+++ b/index.html
@@ -2,79 +2,89 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>BlackFalcon SOC™</title>
-<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Cyber Sentinel SOC</title>
 
 <style>
 body{
 margin:0;
-font-family:'Orbitron',sans-serif;
-background:linear-gradient(180deg,#001a14,#000);
+font-family:Arial, sans-serif;
+background:#0b1110;
 color:#00ffcc;
-transition:0.5s;
-}
-
-body.alert{
-background:#3b0000 !important;
+transition:0.3s;
 }
 
 header{
 text-align:center;
-padding:40px 20px;
-}
-
-textarea{
-width:85%;
-height:150px;
-display:block;
-margin:20px auto;
-background:#000;
-border:2px solid #00ffcc;
-border-radius:20px;
 padding:20px;
-color:#00ffcc;
-font-size:16px;
+border-bottom:1px solid #00ffcc33;
 }
 
 button{
-display:inline-block;
-margin:10px;
-padding:10px 25px;
-background:#00ffcc;
-border:none;
-border-radius:15px;
-font-weight:bold;
+background:#000;
+color:#00ffcc;
+border:1px solid #00ffcc;
+padding:8px 18px;
+border-radius:8px;
 cursor:pointer;
 }
 
-.center{text-align:center;}
+.container{
+max-width:900px;
+margin:30px auto;
+padding:20px;
+background:#061a17;
+border-radius:15px;
+box-shadow:0 0 20px #00ffcc22;
+}
+
+textarea{
+width:100%;
+height:120px;
+background:#000;
+color:#00ffcc;
+border:2px solid #00ffcc;
+border-radius:12px;
+padding:12px;
+resize:none;
+}
 
 .card{
-width:85%;
-margin:20px auto;
-background:#050505;
-border-radius:20px;
-padding:25px;
-box-shadow:0 0 30px #00ffcc22;
+margin-top:20px;
+padding:15px;
+background:#000;
+border-radius:12px;
 }
 
 .progress{
 height:10px;
 background:#111;
 border-radius:10px;
-margin-top:15px;
-overflow:hidden;
+margin-top:10px;
 }
 
 .bar{
 height:100%;
 width:0%;
 background:#00ffcc;
-transition:0.5s;
+border-radius:10px;
+transition:0.4s;
 }
 
-.bar.danger{
-background:#ff0000;
+.danger{
+background:#2a0000 !important;
+color:#ff4d4d !important;
+}
+
+.alert{
+background:#140000;
+}
+
+footer{
+text-align:center;
+padding:15px;
+font-size:12px;
+border-top:1px solid #00ffcc33;
 }
 </style>
 </head>
@@ -82,124 +92,173 @@ background:#ff0000;
 <body>
 
 <header>
-<h1 class="speakable">🦅 BlackFalcon SOC</h1>
-<p class="speakable">Advanced Security Operations Platform</p>
+<h1>🛡 Cyber Sentinel SOC</h1>
+<p id="subtitle">Advanced Security Operations Platform</p>
+<button onclick="toggleLang()" id="langBtn">EN</button>
 </header>
 
-<div class="center">
-<button onclick="toggleLang()" class="speakable">Change Language</button>
-<button onclick="window.print()" class="speakable">Export Report</button>
-</div>
+<div class="container">
 
-<textarea id="msg" placeholder="Paste suspicious message here..." class="speakable"></textarea>
+<textarea id="msg" placeholder="Paste suspicious message here..."></textarea>
 
 <div class="card">
-<h3 class="speakable">Threat Status</h3>
-<p id="status" class="speakable">—</p>
-<p class="speakable">Risk Score: <span id="score">0</span>%</p>
+<h3 id="threatTitle">Threat Status</h3>
+<p id="status">-</p>
+
+<p><span id="riskLabel">Risk Score</span>: <span id="score">0</span>%</p>
 <div class="progress"><div class="bar" id="bar"></div></div>
-<p class="speakable">MITRE: <span id="mitre">—</span></p>
-<p class="speakable">Incident ID: <span id="incident">—</span></p>
+
+<p><strong id="incidentLabel">Incident ID</strong>: <span id="incident">-</span></p>
+
+<p id="mitre">None</p>
+
+<div id="recommendation"></div>
+
 </div>
+
+</div>
+
+<footer>
+Cyber Sentinel SOC Simulation
+</footer>
 
 <script>
 
 let currentLang="en";
-let debounceTimer=null;
-let analyzedOnce=false;
+let debounceTimer;
 
+/* كلمات مشبوهة */
 const suspiciousWords=[
-"تحقق من حسابك","تحقق من كلمة المرور","ادخل بياناتك",
-"رقم البطاقة","رمز التحقق","تم تجميد حسابك",
-"verify your account","account suspended",
-"reset your password","claim your prize",
-"free gift card","urgent action required"
+"قم بالدخول إلى حسابك","تحديث الحساب","فعّل الآن","تغيير كلمة المرور",
+"انقر هنا","انقر الآن","تحقق من حسابك","تفاصيل الدفع مطلوبة",
+"إعادة تعيين كلمة المرور","عرض حصري","عاجل","مجاني 100%","اربح المال",
+"مليون دولار","ضمان استرداد الأموال","بنك","بطاقة إئتمان","نقدي",
+"اضغط هنا","verify","login now","free","urgent","limited offer"
 ];
 
-const pattern=new RegExp(suspiciousWords.join("|"),"i");
-
-/* 🎙 اختيار أنعم صوت */
-function getSoftVoice(){
-let voices=window.speechSynthesis.getVoices();
-return voices.find(v =>
-v.name.toLowerCase().includes("female") ||
-v.name.toLowerCase().includes("siri") ||
-v.name.toLowerCase().includes("google") ||
-v.name.toLowerCase().includes("zira")
-) || voices[0];
+function generateID(){
+return "INC-"+Math.floor(Math.random()*1000000);
 }
 
+/* صوت أهدأ */
 function speak(text){
-
-if(!text || text.length<2) return;
-
-window.speechSynthesis.cancel();
-
-let speech=new SpeechSynthesisUtterance(text);
-speech.lang=currentLang==="ar"?"ar-SA":"en-US";
-speech.rate=0.95;
-speech.pitch=1;
-speech.volume=1;
-speech.voice=getSoftVoice();
-
-window.speechSynthesis.speak(speech);
+let s=new SpeechSynthesisUtterance(text);
+s.lang=currentLang==="ar"?"ar-SA":"en-US";
+s.rate=0.85;
+s.pitch=0.9;
+s.volume=0.6;
+speechSynthesis.cancel();
+speechSynthesis.speak(s);
 }
 
 function analyze(){
 
-let text=document.getElementById("msg").value.trim();
+let text=document.getElementById("msg").value.toLowerCase();
 if(text.length<3) return;
 
+let score=0;
+
+suspiciousWords.forEach(word=>{
+if(text.includes(word.toLowerCase())){
+score+=15;
+}
+});
+
 let statusEl=document.getElementById("status");
+let scoreEl=document.getElementById("score");
 let bar=document.getElementById("bar");
-let score=document.getElementById("score");
+let mitre=document.getElementById("mitre");
+let recBox=document.getElementById("recommendation");
+let incident=document.getElementById("incident");
 
-document.body.classList.remove("alert");
-bar.classList.remove("danger");
+incident.innerText=generateID();
 
-if(pattern.test(text)){
+if(score>=40){
 
-statusEl.innerText="HIGH RISK";
-score.innerText="100";
-bar.style.width="100%";
-bar.classList.add("danger");
+statusEl.innerText=currentLang==="ar"?"خطر عالي":"HIGH RISK";
+scoreEl.innerText=score;
+bar.style.width=score+"%";
+mitre.innerText="T1566 - Phishing";
 document.body.classList.add("alert");
 
-setTimeout(()=>speak("Warning. High risk message detected"),300);
+recBox.innerText=currentLang==="ar"?
+"⚠️ التوصية الأمنية: لا تضغط أي رابط. قم بحظر المرسل وإبلاغ فريق الأمن السيبراني فوراً." :
+"⚠️ Security Recommendation: Do NOT click any links. Block the sender and report immediately.";
+
+recBox.classList.add("danger");
+
+setTimeout(()=>{
+speak(currentLang==="ar"?
+"تحذير. الرسالة خطيرة جداً":
+"Warning. High risk message detected.");
+},500);
 
 }else{
 
-statusEl.innerText="SAFE";
-score.innerText="0";
+statusEl.innerText=currentLang==="ar"?"آمن":"SAFE";
+scoreEl.innerText="0";
 bar.style.width="0%";
+mitre.innerText="None";
+document.body.classList.remove("alert");
 
-setTimeout(()=>speak("Message is safe"),300);
+recBox.innerText=currentLang==="ar"?
+"✔ التوصية الأمنية: لا يوجد مؤشرات خطيرة. فقط استمر بالمراقبة." :
+"✔ Security Recommendation: No malicious indicators detected. Continue monitoring.";
+
+recBox.classList.remove("danger");
+
+setTimeout(()=>{
+speak(currentLang==="ar"?
+"الرسالة آمنة":
+"Message is safe.");
+},500);
 }
 
-analyzedOnce=true;
 }
 
-/* 🔥 تحليل فقط بعد التوقف عن الكتابة */
+/* تحليل بعد التوقف */
 document.getElementById("msg").addEventListener("input",()=>{
 clearTimeout(debounceTimer);
 debounceTimer=setTimeout(analyze,2000);
 });
 
-/* 🎙 قراءة أي عنصر يمر عليه الماوس */
+/* قراءة عند التركيز */
+document.getElementById("msg").addEventListener("focus",()=>{
+speak(currentLang==="ar"?
+"أنت الآن في مربع إدخال النص. الصق الرسالة للتحليل.":
+"You are now in the text input box. Paste message to analyze.");
+});
+
+/* قراءة عند المرور */
 document.addEventListener("mouseover",(e)=>{
-let text=e.target.innerText || e.target.placeholder;
-if(e.target.classList.contains("speakable") || e.target.tagName==="BUTTON"){
-speak(text);
+if(e.target.tagName==="BUTTON"){
+speak(e.target.innerText);
 }
 });
 
-/* 🔥 قراءة مربع النص عند الدخول فقط */
-document.getElementById("msg").addEventListener("focus",()=>{
-speak("Text input box. Paste message to analyze.");
-});
-
+/* تغيير اللغة */
 function toggleLang(){
-currentLang=currentLang==="en"?"ar":"en";
+
+let btn=document.getElementById("langBtn");
+
+if(currentLang==="en"){
+currentLang="ar";
+btn.innerText="AR";
+document.getElementById("subtitle").innerText="منصة مركز العمليات الأمنية";
+document.getElementById("threatTitle").innerText="حالة التهديد";
+document.getElementById("riskLabel").innerText="درجة الخطورة";
+document.getElementById("incidentLabel").innerText="رقم الحادثة";
+document.getElementById("msg").placeholder="الصق الرسالة هنا للتحليل...";
+}else{
+currentLang="en";
+btn.innerText="EN";
+document.getElementById("subtitle").innerText="Advanced Security Operations Platform";
+document.getElementById("threatTitle").innerText="Threat Status";
+document.getElementById("riskLabel").innerText="Risk Score";
+document.getElementById("incidentLabel").innerText="Incident ID";
+document.getElementById("msg").placeholder="Paste suspicious message here...";
+}
+
 speak(currentLang==="ar"?"تم تغيير اللغة":"Language changed");
 }
 
